--- a/index.html
+++ b/index.html
@@ -14,33 +14,8 @@
 </style>
 
 <body>
-    <br>
 
-    <div class="navbar">
-        <a href="index.html" > Home</a>
-        <a href="projects.html">Projects</a>
-        <a>. . .</a>
-    
-    </div>
-
-
-    <br><br>
-    <a class="topline"></a>
-
-
-
-    
-    <a class="big_text">Hello</a>
-    <a class="half_text">I am a developer</a>
-
-    <img src="bubbles2.png" alt="Italian Trulli" class="circle"> </img>
-
-
-    <br><br>
-
-    <br>
-    <script src="script.js"></script>
-    <br>
+    <h1 class="text">HI TEST</h1>
 
 </body>
 
