--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 </style>
 
 <body>
+
+
+
 	<!-- Top Navigation Menu -->
 	<div class="topnav">
-
-
+		<div href="javascript:void(0);" onclick="myFunction()">
+			<h1 class= "text" style="left:20%;" >OTA</h1>
+		</div>
+		
 		<div id="myLinks">
-			<a href="#news">News</a>
-			<a href="#contact">Contact</a>
-			<a href="#about">About</a>
+			<a href="#news" style=" left:50%, top:10%">News</a>
+			<a href="#contact" style=" left:55%, top:10%">Contact</a>
+			<a href="#about" style=" left:60%, top:10%">About</a>
 		</div>
 
 	</div>
-	<div href="javascript:void(0);" onclick="myFunction()">
-		<h1 class= "text" style="left:20%;" >OTA</h1>
-	</div>
+
 	<script>
 		function myFunction() {
 		  var x = document.getElementById("myLinks");
@@ -37,7 +40,7 @@
 			x.style.display = "block";
 		  }
 		}
-		</script>
+	</script>
 </body>
 
 </html>
