--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
 
 
 	<!-- Top Navigation Menu -->
+	<h1 class= "text" style="left:20%;" >OTA</h1>
+
+	<div href="javascript:void(0);" onclick="myFunction()">
+		<a class="menu" ></a>
+	</div>
+
 	<div class="topnav">
-		<div href="javascript:void(0);" onclick="myFunction()">
-			<h1 class= "text" style="left:20%;" >OTA</h1>
-		</div>
 		
 		<div id="myLinks">
-			<a href="#news" style=" left:50%, top:10%">News</a>
-			<a href="#contact" style=" left:55%, top:10%">Contact</a>
-			<a href="#about" style=" left:60%, top:10%">About</a>
+			<a href="#news" style="top:10%">News</a> 
+			<a href="#contact" style="top:15%">Contact</a>
+			<a href="#about" style="top:20%">About</a>
 		</div>
 
 	</div>
