--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<h1 class= "text" style="left:20%;" >OTA</h1>
 
 	<div href="javascript:void(0);" onclick="myFunction()">
-		<a class="menu" ></a>
+		<button class="menu" ></button>
 	</div>
 
 	<div class="topnav">
