--- a/index.html
+++ b/index.html
@@ -13,37 +13,39 @@
 <style>
 </style>
 
+<script src="new.js"></script>
+
+
 <body>
+	
 
+	<div id="menu" > 
+		<button> iuhwd </button>
 
+		<button> uiwhs </button>
 
-	<!-- Top Navigation Menu -->
-	<h1 class= "text" style="left:20%;" >OTA</h1>
+		<button> dwiuhi </button>
 
-	<div href="javascript:void(0);" onclick="myFunction()">
-		<button class="menu" ></button>
 	</div>
 
-	<div class="topnav">
+	<div>
+		<p class= "logo">OTA</p>
+
+
+	<!-- dont ask why their is invisable button-->
+
+		<button class="b" onclick="show_hide()" >
+			
+			<a class="fa" style="top:9%; display"></a>
+			<a class="fa" style="top:11%;"></a>
+			<a class="fa" style="top:13%;"></a>
+		</button>
+
 		
-		<div id="myLinks">
-			<a href="#news" style="top:10%">News</a> 
-			<a href="#contact" style="top:15%">Contact</a>
-			<a href="#about" style="top:20%">About</a>
-		</div>
 
+		
+		<h1 style="top:40%"> Hi,I am a devloper</h1>
 	</div>
-
-	<script>
-		function myFunction() {
-		  var x = document.getElementById("myLinks");
-		  if (x.style.display === "block") {
-			x.style.display = "none";
-		  } else {
-			x.style.display = "block";
-		  }
-		}
-	</script>
 </body>
 
 </html>
