--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">  
 
 </head>
-<style>
-</style>
 
 <script src="new.js"></script>
 
 
 <body>
-	
+
+	<button id="back" onclick="show_hide()"> <h2> <-- </h2></button>
 
 	<div id="menu" > 
 		<button> iuhwd </button>
@@ -34,14 +33,14 @@
 
 	<!-- dont ask why their is invisable button-->
 
-		<button class="b" onclick="show_hide()" >
+
+		<button class="b" onclick="show_hide()">
 			
-			<a class="fa" style="top:9%; display"></a>
+			<a class="fa" style="top:9%;"></a>
 			<a class="fa" style="top:11%;"></a>
 			<a class="fa" style="top:13%;"></a>
 		</button>
 
-		
 
 		
 		<h1 style="top:40%"> Hi,I am a devloper</h1>
