--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 		<button class="b" onclick="show_hide()">
 			
-			<a class="fa" style="top:9%;"></a>
-			<a class="fa" style="top:11%;"></a>
-			<a class="fa" style="top:13%;"></a>
+			<button class="fa" style="top:9%;"></button>
+			<button class="fa" style="top:11%;"></button>
+			<button class="fa" style="top:13%;"></button>
 		</button>
 
 
