--- a/index.html
+++ b/index.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>my website.com</title>
-	<link href="new.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">  
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<title>OTA</title>
+		<link href="new.css" rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">  
 
-</head>
+	</head>
 
-<script src="new.js"></script>
+	<body>
+		<header>
+			<h1>OTA</h1>
+			<nav> 
+				<ul class="nav">
+					<li><a href="#">PROJECTS</a></li>
+					<li><a href="#">IMAGES</a></li>
+					<li><a href="#">PROJECTS</a></li>
+				</ul>
+			</nav>
+		</header>
 
+		<h1 style="padding:10%;font-size:220px;">OTA</h1>
+		<h1 style="font-size:80px;">OTA</h1>
 
-<body>
-
-	<button id="back" onclick="show_hide()"> <h2> <-- </h2></button>
-
-	<div id="menu" > 
-		<button> iuhwd </button>
-
-		<button> uiwhs </button>
-
-		<button> dwiuhi </button>
-
-	</div>
-
-	<div>
-		<p class= "logo">OTA</p>
-
-
-	<!-- dont ask why their is invisable button-->
-
-
-		<button class="b" onclick="show_hide()">
-			
-			<button class="fa" style="top:9%;"></button>
-			<button class="fa" style="top:11%;"></button>
-			<button class="fa" style="top:13%;"></button>
-		</button>
-
-
-		
-		<h1 style="top:40%"> Hi,I am a devloper</h1>
-	</div>
-</body>
+	</body>
 
 </html>
