front page 1/2 done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 				</ul>
 			</nav>
 		</header>
-
-		<h1 style="padding:10%;font-size:220px;">OTA</h1>
-		<h1 style="font-size:80px;">OTA</h1>
+		<h1 style="padding:8%;">OTA <p>A developer</p></h1>
 
 	</body>
 
