--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html>
+	<html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
-		<title>OTA</title>
-		<link href="new.css" rel="stylesheet" />
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">  
+		<head>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width">
+			<title>OTA</title>
+			<link href="new.css" rel="stylesheet" />
+			<link rel="preconnect" href="https://fonts.gstatic.com">
+			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
+			<link rel="icon" type="image/png" href="l.png"> 
 
-	</head>
+		</head>
 
-	<body>
-		<header>
-			<h1>OTA</h1>
-			<nav> 
-				<ul class="nav">
-					<li><a href="#">PROJECTS</a></li>
-					<li><a href="#">IMAGES</a></li>
-					<li><a href="#">PROJECTS</a></li>
-				</ul>
-			</nav>
-		</header>
-		<h1 style="padding:8%;">OTA <p>A developer</p></h1>
+		<body>
+			<header>
+				<h1>OTA</h1>
+				<nav> 
+					<ul class="nav">
+						<li><a href="#">PROJECTS</a></li>
+						<li><a href="#">IMAGES</a></li>
+						<li><a href="#">PROJECTS</a></li>
+					</ul>
+				</nav>
+			</header>
+				<h1 style="padding:8%;">OTA
+					 <p>A developer</p>
+				</h1>
+				<div style="padding:10%">
+					<h>Who is 
+						<a>HE</a>
+					</h>
+					<br>
 
-	</body>
+					<h>
+						<a>OTA IS</a> 
+					</h>
+					<a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </a>
+				</div> 
+		</body>
 
-</html>
+	</html>
