--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>my website.com</title>
-	<link href="new.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">  
-</head>
-
-<style>
-</style>
-
-<body>
-
-
-</body>
-
-</html>
-
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<title>Document</title>
+		</head>
+		
+		<body>
+			
+		</body>
+	</html>
