hi iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii this is nOT USFI Angel StudiosULL AT all

--- a/index.html
+++ b/index.html
@@ -28,14 +28,25 @@
 				</h1>
 				<div style="padding:10%">
 					<h>Who is 
-						<a>HE</a>
+						<a style="color:#AD6ED2;">HE</a>
 					</h>
-					<br>
-
+					<br><br>
 					<h>
-						<a>OTA IS</a> 
+						<a style="color:#3A6977;">OTA IS</a> 
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
 					</h>
-					<a>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </a>
+
+					<br><br>
+
+					<h>Who is 
+						<a style="color:#AD6ED2;">HE</a>
+					</h>
+					<br><br>
+					<h>
+						<a style="color:#3A6977;">OTA DOSE</a> 
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. </p>
+					</h>
+					
 				</div> 
 		</body>
 
