Projects tab added Home page completed

--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-	<html lang="en">
+	<html>
+
 		<head>
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<title>Document</title>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width">
+			<title>OTA</title>
+			<link href="new.css" rel="stylesheet" />
+			<link rel="preconnect" href="https://fonts.gstatic.com">
+			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
+			<link rel="icon" type="image/png" href="l.png"> 
+	
+
 		</head>
-		
+
 		<body>
-			
+			<header>
+				<h1><a href="index.html" >OTA</a></h1>
+				<nav> 
+					<ul class="nav">
+						<li><a href="#">PROJECTS</a></li>
+						<li><a href="#">IMAGES</a></li>
+						<li><a href="#" style="	font-family: 'Roboto',Medium;">PROJECTS</a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<h1 style="padding:8%;font-size:13.25rem;">PROJECTS</h1>
+
 		</body>
+
 	</html>
