--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<body>
 			<header>
 				<h1><a href="index.html" >OTA</a></h1>
+				
 				<nav> 
 					<ul class="nav">
 						<li><a href="projects.html">PROJECTS</a></li>
@@ -28,10 +29,11 @@
 			<h1 style="padding:8%;">OTA
 				<p>A developer</p>
 				
-				<div class="icons">
-					<img src="Discord-Logo-Color.png" style="width: 6rem;"></img>
-					<a style ="background-image: url(itchio-textless-black.svg);"></a>
-				</div>
+				<!--<div class="icons">
+					<link href="google.com" > <img src="Discord-Logo-Color.png" ></img></a>
+					<button href="google.com" > <img src="icons8-itch-io-96.png" ></img></button>
+				</div>-->
+
 			</h1>
 
 
