Extra Projects page del

--- a/projects.html
+++ b/projects.html
@@ -14,13 +14,13 @@
 		</head>
 
 		<body>
+			
 			<header>
 				<h1><a href="index.html" >OTA</a></h1>
 				<nav> 
 					<ul class="nav">
-						<li><a href="#">PROJECTS</a></li>
+						<li><a href="projects.html">PROJECTS</a></li>
 						<li><a href="#">IMAGES</a></li>
-						<li><a href="#" style="	font-family: 'Roboto',Medium;">PROJECTS</a></li>
 					</ul>
 				</nav>
 			</header>
