--- a/projects.html
+++ b/projects.html
@@ -3,18 +3,18 @@
 
 		<head>
 			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width">
 			<title>OTA</title>
 			<link href="new.css" rel="stylesheet" />
 			<link rel="preconnect" href="https://fonts.gstatic.com">
 			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
 			<link rel="icon" type="image/png" href="l.png"> 
-	
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 		</head>
 
 		<body>
-			
+
 			<header>
 				<h1><a href="index.html" >OTA</a></h1>
 				<nav> 
@@ -25,7 +25,9 @@
 				</nav>
 			</header>
 
-			<h1 style="padding:8%;font-size:13.25rem;">PROJECTS</h1>
+			<h1 style="padding:8%;font-size:13.25vw;">PROJECTS</h1>
+
+			<img src="website_img.png" style="width:25rem; display: flex; position: flex;"></img>
 
 		</body>
 
