--- a/image.html
+++ b/image.html
@@ -25,9 +25,12 @@
 				</nav>
 			</header>
 
-			<h1 style="padding:8%;font-size:13.25vw;">PROJECTS</h1>
-
-			<img src="website_img.png" style="width:25rem; display: flex; position: flex;"></img>
+			<h1 style="padding:8%;font-size:13.25vw;">IMAGES</h1>
+            
+            <div style="width:25rem; display: flexbox; position: flexbox ; height:auto;">
+                <img src="l.png"> </img>
+                <img src="website_img.png"> </img>
+            </div>
 
 		</body>
 
