--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
 			<header>
 				<h1><a href="index.html" >OTA</a></h1>
 			
-				<nav> 
 					<ul class="nav">
 						<li><a href="projects.html">PROJECTS</a></li>
-						<li><a href="#">IMAGES</a></li>
+						<li><a href="image.html">IMAGES</a></li>
 					</ul>
-				</nav>
 			</header>
 
 			<h1 style="padding:8%;">OTA
@@ -45,14 +43,14 @@
 				<br><br>
 
 				<h>What  he
-					<a style="color:#56B6C2;">DOSE</a>
+					<a style="color:#56B6C2;">DOES</a>
 				</h>
 
 				<br><br>
 
 				<h>
-					<a style="color:#CA6671;">OTA DOSE</a> 
-					<p> OTA dose webdev, appdev and gamedev </p>
+					<a style="color:#CA6671;">OTA DOES</a> 
+					<p> OTA does webdev, appdev and gamedev </p>
 				</h>
 			</div> 
 			
