--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width">
 			<title>OTA</title>
-			<link href="new.css" rel="stylesheet" />
+
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+			<link rel="stylesheet" href="new.css"></link>
+
 			<link rel="preconnect" href="https://fonts.gstatic.com">
 			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
 			<link rel="icon" type="image/png" href="l.png"> 
@@ -14,46 +17,14 @@
 		</head>
 
 		<body>
+			<div class="d-flex flex-column text-center">
+				<h1 style="font-size:12rem; color:white;">OTA</h1>
+				<p>A devloper & 3d artist</p>
+			</div>
 
-			<header>
-				<h1><a href="index.html" >OTA</a></h1>
-			
-					<ul class="nav">
-						<li><a href="projects.html">PROJECTS</a></li>
-						<li><a href="image.html">IMAGES</a></li>
-					</ul>
-			</header>
 
-			<h1 style="padding:8%;">OTA
-				<p>A developer</p>
-			</h1>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-			<div style="padding:10%">
-				<h>Who is 
-					<a style="color:#AD6ED2;">HE</a>
-				</h>
-
-				<br><br>
-				
-				<h>
-					<a style="color:#3A6977;">OTA IS</a> 
-					<p> OTA is a teen developer. He is intermediate in python, css and html. Currently he is learing javascript and webdev.</p>
-				</h>
-
-				<br><br>
-
-				<h>What  he
-					<a style="color:#56B6C2;">DOES</a>
-				</h>
-
-				<br><br>
-
-				<h>
-					<a style="color:#CA6671;">OTA DOES</a> 
-					<p> OTA does webdev, appdev and gamedev </p>
-				</h>
-			</div> 
-			
 		</body>
 
 	</html>
