--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com">
 			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
 			<link rel="icon" type="image/png" href="l.png"> 
-	
 
 		</head>
 
 		<body>
-			<div class="d-flex flex-column text-center">
-				<h1 style="font-size:12rem; color:white;">OTA</h1>
-				<p>A devloper & 3d artist</p>
+			<div class="container text-center justify-content-center">
+				<div class="row">
+					<h1 style="font-size:12rem; color:white;">OTA</h1>
+					<p style="font-size:3rem;color:#3A6977; ">A devloper & 3d artist</p>
+				</div>
+				<div class="row gap-2 btn-lg">
+					<button class="btn col-sm" id="btn_1" type="button">My Work</button>
+					<button class="btn col-sm" id="btn_2" type="button">About Me</button>
+				</div>
 			</div>
-
-
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 		</body>
