--- a/about.html
+++ b/about.html
@@ -13,12 +13,13 @@
 
     </head>
     <body>
-        <article class="text-center justify-content-center">
-            <div style="width:80%;">
-                <h1>About Me</h1>
-                <p>I am a teen devloper who is currently learing and  and js. My goal is to make apps and websites to help other in their lives.</p>        
+        
+        <article class="container text-center" id="holder">
+            <div>
+                <h1 style="font-size:6rem; color:#56B6C2;">About Me</h1>
+                <p style="font-size:3rem; color:#FFFFFF;">I'm a teen developer who is currently learning python and js. My goal is to make apps and websites to help other in their lives.</p>        
             </div>
-      
         </article>
+
     </body>
 </html>
