--- a/about.html
+++ b/about.html
@@ -13,13 +13,21 @@
 
     </head>
     <body>
-        
+
+        <div style="position:relative;"> 
+            <h1 class="text" id="text"></h1>
+            <h1 class="text-2" id="text"></h1>
+        </div>
+
+        <h1 id="word"></h1>
+
         <article class="container text-center" id="holder">
             <div>
                 <h1 style="font-size:6rem; color:#56B6C2;">About Me</h1>
                 <p style="font-size:3rem; color:#FFFFFF;">I'm a teen developer who is currently learning python and js. My goal is to make apps and websites to help other in their lives.</p>        
             </div>
         </article>
-
+        
+        <script src="index.js"></script>
     </body>
 </html>
