--- a/about.html
+++ b/about.html
@@ -14,12 +14,10 @@
     </head>
     <body>
 
-        <div style="position:relative;"> 
-            <h1 class="text" id="text"></h1>
-            <h1 class="text-2" id="text"></h1>
+        <div style="position:relative; width:100%;" > 
+            <h1 class="text" id="word"></h1>
+            <h1 class="text-2" id="word"></h1>
         </div>
-
-        <h1 id="word"></h1>
 
         <article class="container text-center" id="holder">
             <div>
