--- a/about.html
+++ b/about.html
@@ -12,12 +12,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
 
     </head>
-    <body>
-
-        <div style="position:relative; width:100%;" > 
-            <h1 class="text" id="word"></h1>
-            <h1 class="text-2" id="word"></h1>
-        </div>
+    <body id="about">
+        <button id="arrow" onclick="index()" style="color:rgba(133, 172, 103, 0.5);">Back to Home</button>
 
         <article class="container text-center" id="holder">
             <div>
