--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<p style="font-size:3rem;color:#3A6977; " id="b">A developer & 3d artist</p>
 				</div>
 				<div class="row gap-2 btn-lg justify-content-center" id="btn">
-					<button class="btn" id="btn_1" type="button">My Work</button>
+					<button class="btn" id="btn_1" type="button" onclick=projects()>My Work</button>
 					<button class="btn" id="btn_2" type="button" onclick=about()>About Me</button>
 				</div>
 			</div>
