--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
 			<div class="container text-center" id="holder">
 
 				<div class="row">
-
 					<header style="font-size:12rem; color:white;" id="OTA">OTA</header>
 					<p style="font-size:3rem;color:#3A6977; " id="b">A developer & 3d artist</p>
 				</div>
+
 				<div class="row gap-2 btn-lg justify-content-center" id="btn">
 					<button class="btn" id="btn_1" type="button" onclick=projects()>My Work</button>
 					<button class="btn" id="btn_2" type="button" onclick=about()>About Me</button>
+				</div>
+
+				<div class="row gap-2  justify-content-center" id="btn">
+					<div id="link_btn" style="background-image: url(images/sketchfab.svg)"></div>
+					<div id="link_btn" onclick="about()"><img src="images/itchio.svg"></img></div>
 				</div>
 			</div>
 
