--- a/projects.html
+++ b/projects.html
@@ -15,14 +15,14 @@
     <body id="body_nobg">
         <div class="d-md-flex h-md-100 align-items-center" style="height:100%;" >
 
-            <div class="col-md-6 p-0  h-md-100" >
-                <img src="images/calc.png">
+            <div class="col-md-6 p-0  h-md-100 justify-content-center" >
+                <img src="images/calc.png" style="">
 
                 </img>
             </div>
         
-            <div class="col-md-6 p-0 h-md-100 loginarea" >
-                <img src="images/clock.png">
+            <div class="col-md-6 p-0 h-md-100 loginarea justify-content-center" >
+                <img src="images/clock.png" style="position: absolute; clip: rect(0px,500px,100rem,0px);">
 
                 </img>
             </div>
