--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<div class="container text-center" id="holder">
 
 				<div class="row">
-					<header style="font-size:12rem; color:white;" id="OTA">OTA</header>
-					<p style="font-size:3rem;color:#3A6977; " id="b">A developer & 3d artist</p>
+					<header style="font-size:calc(30px + 15vw); color:white;" id="OTA">OTA</header>
+					<p style="font-size:calc(18px + 3vw);color:#3A6977; " id="b">A developer & 3d artist</p>
 				</div>
 
 				<div class="row gap-2 btn-lg justify-content-center" id="btn">
