--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 		<body id="ota">
 
-			<div class="container text-center" id="holder">
+			<div class="container text-center" id="c">
 
 				<div class="row">
-					<header style="font-size:calc(30px + 15vw); color:white;" id="OTA">OTA</header>
-					<p style="font-size:calc(18px + 3vw);color:#3A6977; " id="b">A developer & 3d artist</p>
+					<header style="font-size:min(15rem,18px + 30vw); color:white;" id="OTA">OTA</header>
+					<p style=" font-size:min(5rem,18px + 12vw);color:#3A6977; " id="b">A developer & 3d artist</p>
 				</div>
 
 				<div class="row gap-2 btn-lg justify-content-center" id="btn">
