--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 				</div>
 
 				<div class="row gap-2 btn-lg justify-content-center" id="btn">
-					<button class="btn" id="btn_1" type="button" onclick=projects()>My Work</button>
+					<button class="btn" id="btn_1" type="button" onclick=work()>My Work</button>
 					<button class="btn" id="btn_2" type="button" onclick=about()>About Me</button>
 				</div>
 
 				<div class="row gap-2  justify-content-center" id="btn">
 					<div id="link_btn" style="background-image: url(images/sketchfab.svg)"></div>
-					<div id="link_btn" onclick="about()"><img src="images/itchio.svg"></img></div>
+					<div id="link_btn" onclick=""><img src="images/itchio.svg"></img></div>
 				</div>
 			</div>
 
