--- a/index.html
+++ b/index.html
@@ -14,26 +14,21 @@
 
 		</head>
 
-		<body id="ota">
+		<body >
+			<div id="ota">
 
-			<div class="container text-center" id="c">
+				<div class="container justify-content-center " id="c" >
+					<ul class="text-center">
+						<li><a>Projects</a></li>
+						<li><a>About me</a></li>
+					</ul>
+					<div id="text">
+						<h1>OTA</h1>
+						<p>A 3d artist and developer</p>
+					</div>
 
-				<div class="row">
-					<header style="font-size:min(15rem,18px + 30vw); color:white;" id="OTA">OTA</header>
-					<p style=" font-size:min(5rem,18px + 12vw);color:#3A6977; " id="b">A developer & 3d artist</p>
-				</div>
-
-				<div class="row gap-2 btn-lg justify-content-center" id="btn">
-					<button class="btn" id="btn_1" type="button" onclick=work()>My Work</button>
-					<button class="btn" id="btn_2" type="button" onclick=about()>About Me</button>
-				</div>
-
-				<div class="row gap-2  justify-content-center" id="btn">
-					<div id="link_btn" style="background-image: url(images/sketchfab.svg)"></div>
-					<div id="link_btn" onclick=""><img src="images/itchio.svg"></img></div>
 				</div>
 			</div>
-
 			<script src="index.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		</body>
