--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<body >
 			<div id="ota">
 
-				<div class="container justify-content-center " id="c" >
+				<div class="justify-content-center " id="c" >
 					<ul class="text-center">
 						<li><a>Projects</a></li>
 						<li><a>About me</a></li>
