--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
 		</head>
 
 		<body>
-			<div class="justify-content-center " id="c" >
-				<ul class="text-center">
-					<li><a>Projects</a></li>
-					<li><a>About me</a></li>
+			<div class="justify-content-center" id="c" >
+
+				<img id="nav" src="images/nav.svg"></img>
+				
+				<ul class="text-center" id="show">
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="about.html">About me</a></li>
 				</ul>
+
 				<div id="text">
 					<h1>OTA</h1>
 					<p>A 3d artist and developer</p>
 				</div>
 
 			</div>
-			
+
 			<script src="index.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		</body>
