--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<div id="text">
 					<h1>OTA</h1>
-					<p>A 3d artist and developer</p>
+					<p>A <b>3d artist</b> and <b>developer</b></p>
 				</div>
 
 			</div>
