--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<h1>OTA</h1>
 					<p>A <b>3d artist</b> and <b>developer</b></p>
 				</div>
+				<img id="img" src="images/shapes1.png"></img>
 
 			</div>
 
