--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 		</head>
 
 		<body>
-			<div class="justify-content-center" id="c" >
-
-				<img id="nav" src="images/nav.svg"></img>
+			
+		    <script src="js/three.js"></script>
+			<img id="nav" src="images/nav.svg"></img>
 				
-				<ul class="text-center" id="show">
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="about.html">About me</a></li>
-				</ul>
+			<ul class="text-center" id="show">
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="about.html">About me</a></li>
+			</ul>
 
-				<div id="text">
-					<h1>OTA</h1>
-					<p>A <b>3d artist</b> and <b>developer</b></p>
-				</div>
-				<img id="img" src="images/shapes1.png"></img>
-
+			<div id="text">
+				<h1>OTA</h1>
+				<p>A <b>3d artist</b> and <b>developer</b></p>
 			</div>
+			<img id="img" src="images/shapes1.png"></img>
+
+			
 
 			<script src="index.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
