I forgot about this

--- a/about.html
+++ b/about.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
-        <title>OTA-About</title>
+	<html>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="new.css"></link>
+		<head>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width">
+			<title>OTA</title>
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"> 
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+			<link rel="stylesheet" href="new.css"></link>
 
-    </head>
-    <body id="about">
-        <button id="arrow" onclick="index()" style="color:rgba(133, 172, 103, 0.5);">Back to Home</button>
-
-        <article class="container text-center" id="holder">
-            <div>
-                <h1 style="font-size:6rem; color:#56B6C2;">About Me</h1>
-                <p style="font-size:3rem; color:#FFFFFF;">I'm a teen developer who is currently learning python and js. My goal is to make apps and websites to help other in their lives.</p>        
-            </div>
-        </article>
+			<link rel="preconnect" href="https://fonts.gstatic.com">
+			<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+		</head>
         
-        <script src="index.js"></script>
-    </body>
-</html>
+		<body>  
+      <div id="nav">
+        <a style="color: #247BA0;" href="index.html">Ogooluwa</a>
+        <a class="left" href="about.html">About</a>
+        <a class="bottom" href="projects.html">Projects</a>
+      </div>
+        
+      <div class="center">
+        <h1>About</h1>
+        <p>/əˈbout/</p>
+        <span>A devloper, who dosnt know how to devlop. Blender artist that needs rethink his art. Jesus lover. Violin player who really needs to practice. Advent reader who hasnt read a novel in few years. Writer that cant spell. Track star with astham</span>
+
+      </div>
+      <div>
+      </div>
+
+  
+		</body>
+
+	</html>
